# easy-scraper-py

./: Makefile  README.md  README.rst  pyproject.toml
.github/workflows/: python-package.yml
easy_scraper/: __init__.py  htmlparser.py  matching.py
easy_scraper/entity/: __init__.py
tests/: test_match.py
